--- a/mps.html
+++ b/mps.html
@@ -12,10 +12,9 @@
 <body>
     <div>
         <nav class="main-navigation">
-            <ul class="menu-list">
-                <div class="square"><li><a href="#rozgrywki">Rozgrywki</a></li></div>
-                <div class="kwadrat"><li><a href="#tabele">Tabele</a></li></div>
-                <div class="ostatni"><li><a href="#statystyki">Statystyki</a></li></div>
+            <div class="square"><a href="#rozgrywki"><img src="img/rozgrywki.png"></a></div>
+            <div class="kwadrat"><a href="#tabele"><img src="img/tabele.png"></a></div>
+            <div class="ostatni"><a href="#statystyki"><img src="img/statystyki.png"></a></div>
             </ul>
         </nav>
 
